# tinyfs

./: .bazelignore  .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README  docker-compose.yml  makefile
docs/: checklist.txt  compliance.txt  goals.md  notes.txt  specs.txt  task.md
files/: index.html
src/: main.cc  main_test.cc  utils.cc  utils.hpp  utils_test.cc
