cc_binary(
    name = "tinyfs",
    srcs = ["src/main.cc"],
    deps = [
        "@boost.beast",
        "@boost.asio", 
        "@boost.system",
        "@boost.filesystem",
    ],
)

cc_test(
    name = "main_test",
    srcs = ["src/main_test.cc"],
    deps = [
        "@googletest//:gtest_main",
    ],
)
