cc_binary(
    name = "main",
    srcs = [
        "src/main.cc",
        "src/utils.cc",
        "src/utils.hpp",
    ],
    deps = [
        "@boost.beast",
        "@boost.asio", 
        "@boost.system",
        "@boost.filesystem",
        "@boost.program_options",
        "@spdlog",
    ],
)

cc_test(
    name = "utils_test",
    srcs = [
        "src/utils_test.cc",
        "src/utils.cc",
        "src/utils.hpp",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@boost.beast",
        "@boost.filesystem",
        "@boost.program_options",
        "@spdlog",
    ],
)
