module(
    name = "tinyfs",
    version = "1.0",
)

bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "boost.asio", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.system", version = "1.87.0")
bazel_dep(name = "boost.filesystem", version = "1.87.0")
bazel_dep(name = "boost.program_options", version = "1.87.0")
bazel_dep(name = "spdlog", version = "1.15.3")
